# insurance_agent

./: MANIFEST.in  README.md  pyproject.toml  setup.py
insurance_agent_mgmt/: agent_digest.py  ai_engine.py  api.py  hooks.py  modules.txt  patches.txt  provider_integration.py  renewal_automation.py  utils.py
insurance_agent_mgmt/config/: desktop.py
insurance_agent_mgmt/insurance_agent_mgmt/doctype/agent_commission/: agent_commission.js  agent_commission.json  agent_commission.py
insurance_agent_mgmt/insurance_agent_mgmt/doctype/customer_service_request/: customer_service_request.js  customer_service_request.json  customer_service_request.py
insurance_agent_mgmt/insurance_agent_mgmt/doctype/follow_up_activity/: follow_up_activity.js  follow_up_activity.json  follow_up_activity.py
insurance_agent_mgmt/insurance_agent_mgmt/doctype/fraud_indicator/: fraud_indicator.json  fraud_indicator.py
insurance_agent_mgmt/insurance_agent_mgmt/doctype/health_dependency/: health_dependency.json  health_dependency.py
insurance_agent_mgmt/insurance_agent_mgmt/doctype/insurance_agent/: insurance_agent.js  insurance_agent.json  (+1 more)
insurance_agent_mgmt/insurance_agent_mgmt/notification/: customer_birthday_reminder.json  lead_follow_up_reminder.json  policy_renewal_reminder.json  premium_due_reminder.json  premium_lapse_warning.json
insurance_agent_mgmt/patches/v1_0/: create_default_products.py  setup_new_doctype_permissions.py  setup_roles_and_permissions.py
insurance_agent_mgmt/public/css/: insurance_agent_mgmt.css
insurance_agent_mgmt/public/js/: insurance_agent_mgmt.js
(+51 files in other folders)
